[project]
name = "connectid"
version = "0.0.1"
requires-python = "==3.11.*"
dependencies = [
    "boto3==1.38.15",
    "celery==5.4.0",
    "django==4.1.7",
    "django-allow-cidr==0.7.1",
    "django-axes[ipware]==6.0.3",
    "django-celery-beat==2.9.0",
    "django-environ==0.11.2",
    "django-oauth-toolkit==2.3.0",
    "django-otp==1.1.6",
    "django-phonenumber-field==7.0.2",
    "django-waffle==4.2.0",
    "djangorestframework==3.14.0",
    "fcm-django==2.2.1",
    "geopy==2.4.1",
    "google-api-python-client==2.102.0",
    "google-auth==2.23.2",
    "gunicorn==20.1.0",
    "phonenumberslite==8.13.11",
    "psycopg2==2.9.5",
    "redis==5.1.1",
    "sentry-sdk[django]==2.19.2",
    "twilio==7.16.5",
    "whitenoise==6.9.0",
    "zxcvbn==4.4.28",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "factory-boy==3.3.0",
    "flake8==7.1.1",
    "flake8-isort==6.1.1",
    "pre-commit==4.0.1",
    "pytest==7.4.2",
    "pytest-cov==6.1.1",
    "pytest-django==4.5.2",
]

[tool.uv]
package = false
# Pin transitive dependencies to the versions previously locked by pip-compile so
# the migration to uv reproduces the existing environment exactly. Direct deps are
# pinned in [project.dependencies] / [dependency-groups]. Relax/remove as deps are
# intentionally upgraded.
constraint-dependencies = [
    "amqp==5.3.1",
    "asgiref==3.6.0",
    "async-timeout==5.0.1",
    "billiard==4.2.1",
    "botocore==1.38.15",
    "cachecontrol==0.13.1",
    "cachetools==5.3.1",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "coverage==7.8.0",
    "cron-descriptor==1.4.5",
    "cryptography==41.0.2",
    "deprecated==1.2.14",
    "distlib==0.3.9",
    "django-ipware==5.0.0",
    "django-timezone-field==7.2.1",
    "faker==19.6.2",
    "filelock==3.16.1",
    "firebase-admin==6.2.0",
    "geographiclib==2.0",
    "google-api-core==2.12.0",
    "google-auth-httplib2==0.1.1",
    "google-cloud-core==2.3.3",
    "google-cloud-firestore==2.12.0",
    "google-cloud-storage==2.11.0",
    "google-crc32c==1.5.0",
    "google-resumable-media==2.6.0",
    "googleapis-common-protos==1.60.0",
    "grpcio==1.59.0",
    "grpcio-status==1.59.0",
    "httplib2==0.22.0",
    "identify==2.6.5",
    "idna==3.4",
    "iniconfig==2.0.0",
    "isort==5.13.2",
    "jmespath==1.0.1",
    "jwcrypto==1.5.0",
    "kombu==5.4.2",
    "mccabe==0.7.0",
    "msgpack==1.0.7",
    "mypy-extensions==1.0.0",
    "nodeenv==1.9.1",
    "oauthlib==3.2.2",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pluggy==1.3.0",
    "prompt-toolkit==3.0.48",
    "proto-plus==1.22.3",
    "protobuf==4.24.4",
    "pyasn1==0.5.0",
    "pyasn1-modules==0.3.0",
    "pycodestyle==2.12.1",
    "pycparser==2.21",
    "pyflakes==3.2.0",
    "pyjwt==2.6.0",
    "pyparsing==3.1.1",
    "python-crontab==3.3.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2022.7.1",
    "pyyaml==6.0.2",
    "requests==2.28.2",
    "rsa==4.9",
    "s3transfer==0.12.0",
    "six==1.16.0",
    "sqlparse==0.4.3",
    "swapper==1.4.0",
    "tzdata==2024.2",
    "uritemplate==4.1.1",
    "urllib3==1.26.15",
    "vine==5.1.0",
    "virtualenv==20.28.1",
    "wcwidth==0.2.13",
    "wrapt==1.15.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "connectid.settings"
addopts = "--reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]

# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_django",
    "pylint_celery",
]
django-settings-module = "connectid.settings"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]
