[project]
name = "connectid"
version = "0.0.1"
requires-python = "==3.11.*"
dependencies = [
    "boto3==1.43.25",
    "celery==5.6.3",
    "django==4.1.7",
    "django-allow-cidr==0.7.1",
    "django-anymail[amazon-ses]>=14.0",
    "django-axes[ipware]==6.0.3",
    "django-celery-beat==2.9.0",
    "django-environ==0.13.0",
    "django-oauth-toolkit==2.3.0",
    "django-otp==1.5.4",
    "django-phonenumber-field==7.0.2",
    "django-waffle==4.2.0",
    "djangorestframework==3.15.1",
    "fcm-django==2.2.1",
    "geopy==2.4.1",
    "google-api-python-client==2.197.0",
    "google-auth==2.53.0",
    "google-cloud-bigquery>=3.25.0",
    "gunicorn==26.0.0",
    "phonenumberslite==9.0.32",
    "psycopg2==2.9.12",
    "redis==8.0.0",
    "sentry-sdk[django]==2.62.0",
    "twilio==9.10.9",
    "whitenoise==6.12.0",
    "zxcvbn==4.5.0",
]

[dependency-groups]
dev = [
    "factory-boy==3.3.3",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "ruff>=0.15.18",
]

[tool.uv]
package = false
# Pin transitive dependencies to the versions previously locked by pip-compile so
# the migration to uv reproduces the existing environment exactly. Direct deps are
# pinned in [project.dependencies] / [dependency-groups]. Relax/remove as deps are
# intentionally upgraded.
constraint-dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "amqp==5.3.1",
    "anyio==4.13.0",
    "asgiref==3.11.1",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "billiard==4.2.4",
    "botocore==1.43.25",
    "cachecontrol==0.14.4",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "coverage==7.14.1",
    "cron-descriptor==1.4.5",
    "cryptography==48.0.0",
    "distlib==0.4.2",
    "django-ipware==7.0.1",
    "django-timezone-field==7.2.1",
    "faker==40.21.0",
    "filelock==3.29.1",
    "firebase-admin==6.9.0",
    "frozenlist==1.8.0",
    "geographiclib==2.1",
    "google-api-core==2.31.0",
    "google-auth-httplib2==0.4.0",
    "google-cloud-core==2.6.0",
    "google-cloud-firestore==2.27.0",
    "google-cloud-storage==3.11.0",
    "google-crc32c==1.8.0",
    "google-resumable-media==2.10.0",
    "googleapis-common-protos==1.75.0",
    "grpcio==1.81.0",
    "grpcio-status==1.81.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "identify==2.6.19",
    "idna==3.18",
    "iniconfig==2.3.0",
    "jmespath==1.1.0",
    "jwcrypto==1.5.7",
    "kombu==5.6.2",
    "msgpack==1.1.2",
    "multidict==6.7.1",
    "nodeenv==1.10.0",
    "oauthlib==3.3.1",
    "packaging==26.2",
    "platformdirs==4.10.0",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "proto-plus==1.28.0",
    "protobuf==7.35.0",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pyjwt==2.13.0",
    "pyparsing==3.3.2",
    "python-crontab==3.3.0",
    "python-dateutil==2.9.0.post0",
    "python-ipware==3.0.0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "s3transfer==0.18.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "swapper==1.4.0",
    "tzdata==2026.2",
    "tzlocal==5.3.1",
    "uritemplate==4.2.0",
    "urllib3==2.7.0",
    "vine==5.1.0",
    "virtualenv==21.4.2",
    "wcwidth==0.8.1",
    "yarl==1.24.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "connectid.settings"
addopts = "--reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== ruff ====
[tool.ruff]
line-length = 119
target-version = "py311"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes (flake8 defaults), I: isort
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
# Matches the previous isort "black" profile behaviour.
known-first-party = ["connectid"]

# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_django",
    "pylint_celery",
]
django-settings-module = "connectid.settings"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]
