[project]
name = "connectid"
version = "0.0.1"
requires-python = "==3.11.*"
dependencies = [
    "boto3==1.43.25",
    "celery==5.6.3",
    "django==5.2.15",
    "django-allow-cidr==0.7.1",
    "django-anymail[amazon-ses]>=14.0",
    "django-axes[ipware]==6.0.3",
    "django-celery-beat==2.9.0",
    "django-environ==0.13.0",
    "django-oauth-toolkit==2.3.0",
    "django-otp==1.5.4",
    "django-phonenumber-field==7.0.2",
    "django-waffle==4.2.0",
    "djangorestframework==3.15.1",
    "fcm-django==2.2.1",
    "geopy==2.4.1",
    "google-api-python-client==2.197.0",
    "google-auth==2.53.0",
    "google-cloud-bigquery>=3.25.0",
    "gunicorn==26.0.0",
    "phonenumberslite==9.0.32",
    "psycopg2==2.9.12",
    "redis==8.0.0",
    "sentry-sdk[django]==2.62.0",
    "twilio==9.10.9",
    "whitenoise==6.12.0",
    "zxcvbn==4.5.0",
]

[dependency-groups]
dev = [
    "factory-boy==3.3.3",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "ruff>=0.15.18",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "connectid.settings"
addopts = "--reuse-db"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== ruff ====
[tool.ruff]
line-length = 119
target-version = "py311"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes (flake8 defaults), I: isort
select = ["E", "W", "F", "I"]

[tool.ruff.lint.isort]
# Matches the previous isort "black" profile behaviour.
known-first-party = ["connectid"]

# ==== PyLint ====
[tool.pylint.MASTER]
load-plugins = [
    "pylint_django",
    "pylint_celery",
]
django-settings-module = "connectid.settings"

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]
